kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foobar-api-dep
  labels:
    app: foobar-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: foobar-api
  template:
    metadata:
      labels:
        app: foobar-api
    spec:
      volumes:
        - name: foobar-api-vol
          persistentVolumeClaim:
            claimName: foobar-api-pvc
        - name: machinersa
          secret:
            secretName: machinersa
            defaultMode: 0600
      containers:
        - name: foobar-api-cnt
          image: newa/foobar-api:v1
          ports:
            - containerPort: 80
              name: "whoami"
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          volumeMounts:
            - mountPath: "/cert/"
              name: foobar-api-vol
