kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foobar-api-ing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "false"
spec:
  rules:
  - host: api.mageekbox.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: foobar-api-svc
            port:
              number: 80
